cluster/gateway/hospital-hms-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hms-gateway
  namespace: istio-ingress
  annotations:
    # Example for AWS ALB:
    service.beta.kubernetes.io/aws-load-balancer-internal: "false"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
spec:
  gatewayClassName: istio
  listeners:
  - name: default
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: All
