cluster/gateway/hospital-hms-http-routes.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hospital-hms-routes
spec:
  parentRefs:
  - kind: Gateway
    name: hospital-hms-gateway
    namespace: hospital-hms

  rules:
  - backendRefs:
    - name: opd-service
      port: 8080

    - name: billing-service
      port: 8000

    - name: appointment-service
      port: 8000
